问答微服务开发

--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
         <module>codesocial_common</module>
         <module>codesocial_base</module>
         <module>codesocial_recruit</module>
+        <module>codesocial_qa</module>
     </modules>
     <packaging>pom</packaging>
 
