--- a/codesocial_gathering/pom.xml
+++ b/codesocial_gathering/pom.xml
@@ -6,7 +6,7 @@
         <artifactId>codesocial_parent</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
-    <artifactId>codesocial_article</artifactId>
+    <artifactId>codesocial_gathering</artifactId>
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
