引入mongoDB，完成吐槽微服务

--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>codesocial_qa</module>
         <module>codesocial_article</module>
         <module>codesocial_gathering</module>
+        <module>codesocial_spit</module>
     </modules>
     <packaging>pom</packaging>
 
