--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <module>codesocial_gathering</module>
         <module>codesocial_spit</module>
         <module>codesocial_search</module>
+        <module>codesocial_user</module>
     </modules>
     <packaging>pom</packaging>
 
