--- a/codesocial_user/src/main/resources/application.yml
+++ b/codesocial_user/src/main/resources/application.yml
@@ -15,3 +15,9 @@ spring:
     host: 192.168.80.129
   rabbitmq:
     host: 192.168.80.129
+jwt:
+  config:
+    #密钥
+    key: codesocial
+    #过期时间，如果不配置则无期限，单位是毫秒
+    ttl: 86400000
