--- a/codesocial_qa/src/main/resources/application.yml
+++ b/codesocial_qa/src/main/resources/application.yml
@@ -11,3 +11,12 @@ spring:
   jpa: 
     database: MySQL
     show-sql: true
+jwt:
+  config:
+    key: codesocial
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:6868/eureka
+  instance:
+    prefer-ip-address: true
