--- a/codesocial_recruit/pom.xml
+++ b/codesocial_recruit/pom.xml
@@ -20,5 +20,9 @@
 			<artifactId>codesocial_common</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
+	  <dependency>
+		  <groupId>org.springframework.cloud</groupId>
+		  <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+	  </dependency>
   </dependencies>  
 </project>
