--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,8 @@
         <module>codesocial_search</module>
         <module>codesocial_user</module>
         <module>codesocial_sms</module>
+        <module>codesocial_eureka</module>
+        <module>codesocial_friend</module>
     </modules>
     <packaging>pom</packaging>
 
@@ -45,7 +47,17 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
-
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-dependencies</artifactId>
+                <version>Finchley.M9</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
     <repositories>
         <repository>
             <id>spring-snapshots</id>
