Spring cloud进阶，完成交友微服务，引入熔断器Hystrix和网关Zuul

--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,8 @@
         <module>codesocial_sms</module>
         <module>codesocial_eureka</module>
         <module>codesocial_friend</module>
+        <module>codesocial_manager</module>
+        <module>codesocial_web</module>
     </modules>
     <packaging>pom</packaging>
 
