--- a/codesocial_qa/src/main/resources/application.yml
+++ b/codesocial_qa/src/main/resources/application.yml
@@ -20,3 +20,6 @@ eureka:
       defaultZone: http://localhost:6868/eureka
   instance:
     prefer-ip-address: true
+feign:
+  hystrix:
+    enabled: true
