集中配置组件Spring Cloud Config

--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <module>codesocial_friend</module>
         <module>codesocial_manager</module>
         <module>codesocial_web</module>
+        <module>codesocial_config</module>
     </modules>
     <packaging>pom</packaging>
 
