--- a/codesocial_config/pom.xml
+++ b/codesocial_config/pom.xml
@@ -9,21 +9,12 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>codesocial_manager</artifactId>
-
+    <artifactId>codesocial_config</artifactId>
     <dependencies>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-netflix-zuul</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.code00000001</groupId>
-            <artifactId>codesocial_common</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <artifactId>spring-cloud-config-server</artifactId>
         </dependency>
     </dependencies>
+
 </project>
