--- a/codesocial_manager/src/main/resources/application.yml
+++ b/codesocial_manager/src/main/resources/application.yml
@@ -9,11 +9,15 @@ eureka:
       defaultZone: http://127.0.0.1:6868/eureka/
   instance:
     prefer-ip-address: true
+jwt:
+  config:
+    key: codesocial
 zuul:
   routes:
-    codesocial-gathering: #活动
-      path: /gathering/** #配置请求URL的请求规则
-      serviceId: codesocial-gathering #指定Eureka注册中心中的服务id
+    # 路由配置
+    codesocial-gathering: #活动 名称可以随意取
+      path: /gathering/** #配置请求URL的请求规则，get http://localhost:9005/gathering->http://localhost:9011/gathering/gathering
+      serviceId: codesocial-gathering #指定Eureka注册中心中的服务id  微服的名称
     codesocial-article: #文章
       path: /article/** #配置请求URL的请求规则
       serviceId: codesocial-article #指定Eureka注册中心中的服务id
@@ -22,16 +26,16 @@ zuul:
       serviceId: codesocial-base #指定Eureka注册中心中的服务id
     codesocial-friend: #交友
       path: /friend/** #配置请求URL的请求规则
-      serviceId: codesocial-friend #指定Eureka注册中心中的服务id 
+      serviceId: codesocial-friend #指定Eureka注册中心中的服务id
     codesocial-qa: #问答
       path: /qa/** #配置请求URL的请求规则
-      serviceId: codesocial-qa #指定Eureka注册中心中的服务id 
+      serviceId: codesocial-qa #指定Eureka注册中心中的服务id
     codesocial-recruit: #招聘
       path: /recruit/** #配置请求URL的请求规则
-      serviceId: codesocial-recruit #指定Eureka注册中心中的服务id          
+      serviceId: codesocial-recruit #指定Eureka注册中心中的服务id
     codesocial-spit: #吐槽
       path: /spit/** #配置请求URL的请求规则
-      serviceId: codesocial-spit #指定Eureka注册中心中的服务id      
+      serviceId: codesocial-spit #指定Eureka注册中心中的服务id
     codesocial-user: #用户
       path: /user/** #配置请求URL的请求规则
       serviceId: codesocial-user #指定Eureka注册中心中的服务id
